# cloudmon

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  requirements.yml  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
ansible/inventory/: hosts
ansible/inventory_quickstart/: hosts
ansible/inventory_quickstart/group_vars/: all.yml
ansible/project/: install_epmon.yaml  install_executor.yaml  install_graphite.yaml  install_postgresql.yaml  install_scheduler.yaml  install_statsd.yaml  manage_databases.yaml  manage_grafana_ds.yaml  matrix_entry.yaml  start_epmon.yaml  start_executors.yaml  start_schedulers.yaml  stop_epmon.yaml  stop_executors.yaml  stop_schedulers.yaml
ansible/project/roles/apimon_epmon/: README.md
ansible/project/roles/apimon_epmon/defaults/: main.yml
ansible/project/roles/apimon_epmon/tasks/: main.yml
ansible/project/roles/apimon_epmon/templates/: apimon-epmon.service.j2  env_epmon
ansible/project/roles/apimon_epmon/tests/: test.yml
ansible/project/roles/apimon_epmon/vars/: Debian.yaml  main.yaml
ansible/project/roles/apimon_executor/defaults/: main.yml
ansible/project/roles/apimon_executor/tasks/: main.yml
ansible/project/roles/apimon_scheduler/: README.md
ansible/project/roles/epmon/tasks/: main.yml
ansible/project/roles/firewalld/: README.rst
cloudmon/: __init__.py  apimon.py  config.py  grafana.py  runner.py  statsd.py  types.py  utils.py  version.py
cloudmon/ansible/project/: configure_backend_members.yaml  install_globalmon.yaml  install_grafana.yaml  install_grafana_k8.yaml  install_graphite.yaml  install_patroni.yaml  install_postgresql.yaml  install_postgresql_ha.yaml  install_statsd.yaml  manage_databases.yaml  start_epmon.yaml  start_globalmon.yaml  start_postgresql.yaml  stop_executors.yaml  stop_globalmon.yaml  stop_postgresql.yaml  stop_schedulers.yaml  uninstall_postgresql_ha.yaml  x509-certs.yaml
cloudmon/cli/: apimon.py  combined.py  epmon.py  globalmon.py  grafana.py  graphite.py  metrics.py  postgres.py  statsd.py  status_dashboard.py
cloudmon/kustomize/grafana/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
cloudmon/kustomize/metrics_processor/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
cloudmon/kustomize/redis/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
cloudmon/kustomize/sdb/base/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
cloudmon/plugin/: apimon.py  epmon.py  globalmon.py
cloudmon/service/: grafana.py  metrics.py  sqldb.py  statsd.py  status_dashboard.py  tsdb.py
cloudmon/templates/kustomize/: kustomization.yaml.j2
cloudmon/tests/: test_cloudmon.py
cloudmon/tests/unit/: base.py  test_config.py  test_utils.py
cloudmon/tests/unit/plugins/: test_apimon.py  test_epmon.py
cloudmon/tests/unit/service/: test_metrics.py  test_sdb.py  test_sql.py
doc/: cloudmon-architecture-overview.drawio  globalmon-debugging.md  requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/cli/commands/: apimon.rst  epmon.rst  grafana.rst  graphite.rst  metrics_processor.rst  postgres.rst  provision.rst  statsd.rst  status_dashboard.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: index.rst  install.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/: globalmon-config.yaml  sample_config.yaml  sample_config_epmon.yaml
etc/inventory/group_vars/: all.yaml
etc/inventory_quickstart/: hosts
playbooks/: pre.yaml  run.yaml
releasenotes/source/: conf.py  index.rst
roles/deploy_cloudmon/defaults/: main.yaml
roles/deploy_cloudmon/tasks/: main.yaml
roles/deploy_cloudmon/templates/: inventory.j2
roles/install_cloudmon/tasks/: main.yaml
(+133 files in other folders)
