[metadata]
name = cloudmon
summary = CloudMon controller
description-file =
    README.rst
author = Open Telekom Cloud
home-page = https://open.telekom.cloud/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    cloudmon

[entry_points]
console_scripts =
    cloudmon = cloudmon.runner:main
