[metadata]
name = stackmon
summary = CloudMon controller
description_file =
    README.rst
author = Open Telekom Cloud
home_page = https://open.telekom.cloud/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[pbr]
warnerrors = True

[files]
packages =
    cloudmon
package-data =
    cloudmon = ansible/**/*.yaml

[entry_points]
console_scripts =
    cloudmon = cloudmon.runner:main
