[metadata]
name = stackmon
summary = CloudMon controller
description_file =
    README.rst
author = Open Telekom Cloud
home_page = https://open.telekom.cloud/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[pbr]
warnerrors = True

[files]
packages =
    cloudmon
package-data =
    cloudmon = 
      ansible/**/*.yaml
      templates

[entry_points]
console_scripts =
    cloudmon = cloudmon.runner:main

cloudmon.manager = 
    provision = cloudmon.cli.combined:Provision
    grafana_provision = cloudmon.cli.grafana:GrafanaProvision
    grafana_configure = cloudmon.cli.grafana:GrafanaConfigure
    graphite_provision = cloudmon.cli.graphite:GraphiteProvision
    metrics_processor_provision = cloudmon.cli.metrics:MetricsProcessorProvision
    postgres_provision = cloudmon.cli.postgres:PostgreSQLProvision
    postgres_unprovision = cloudmon.cli.postgres:PostgreSQLUnprovision
    postgres_create_databases = cloudmon.cli.postgres:PostgreSQLProvisionDB
    postgres_start = cloudmon.cli.postgres:PostgreSQLStart
    postgres_stop = cloudmon.cli.postgres:PostgreSQLStop
    statsd_provision = cloudmon.cli.statsd:StatsdProvision
    status_dashboard_provision = cloudmon.cli.status_dashboard:StatusDashboardProvision
    apimon_provision = cloudmon.cli.apimon:ApiMonProvision
    apimon_start = cloudmon.cli.apimon:ApiMonStart
    apimon_stop = cloudmon.cli.apimon:ApiMonStop    
    epmon_provision = cloudmon.cli.epmon:EpmonProvision
    epmon_start = cloudmon.cli.epmon:EpmonStart
    epmon_stop = cloudmon.cli.epmon:EpmonStop
